phpAdsNew - ChangeLog
 v 1.8.1 - 01/02/2001
			+ All language files now have a seperate directory (me)
			+ Added customizable colours to config.inc.php (me)
			+ Increased mail.php speed (Martin Braun)
			+ Bugfix: banners no longer deactivated from mail.php when not needed (Martin Braun)
			+ Bugfix: several fixes in expiration and weeklystats (Martin Braun)
			+ Updated banner acl screen (Martin Braun)
			+ Added language files with help for banner acl (Martin Braun)
			+ New lines are automatically removed from html code in remotehtmlview.php (me)
			+ Bugfix: creditstats now shows html banners correctly (me)
 v 1.8.0 - 06/01/2001	+ Added expiration stats on credit stats and client stats (Martin Braun)
                        + Added weekly stats - needs serious optimizing (Martin Braun)
                        + Added anti-cache feature (Martin Braun)
			+ All files have new indents to make viewing and developing easier. Read DEVELOPERS for more info.
			+ sphourly.php changed to reflect changes in weeklystats (Martin Braun)
			+ Updated documentation.html with explanation about remotehtmlview (me)
			+ Bugfix: kcsm.php had 2 quotes missing and 1 too many (me)
			+ Bugfix: client.php now has client-side JavaScript to detect bad entries in views/clicks/daysleft (me)
			+ Bugfix: mail.php doesn't deactive clients anymore (sypplie)
			+ Bugfix: Authentication required for detailstats now. (me)
			+ Bugfix: forgot banner in creditstats.php. HTML-banners will show now. (me)
                        + Bugfix: several smaller bugs fixed.
 v 1.7.1 - 18/12/2000  + Bugfix: login box only appears once now
 v 1.7.0 - 17/12/2000  + Fixed a problem for Windows users with banneradd.php
                       + GIF/PNG support automatically detected (first contribution of Phil)
                       + Clients now have logout function
                       + When logging in, user is first logged out
                       + Added remote HTML banners through JavaScript